--- a/source/sass/page/__header.scss
+++ b/source/sass/page/__header.scss
@@ -4,7 +4,7 @@
     background-position: center;
     background-size: cover;
     nav {
-        background-color: rgba(131,131,131,.8);
+        background-color: #fff;
         position: relative;
     }
 }
